[package]
name = "lib-decrypt"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
thiserror = "1.0.61"
rsa = {version = "0.9.6" ,features = ["sha2"]}
base64 = "0.22.1"
ring = "0.17.8"
rand = "0.8.5"
hex = "0.4.3"
serde_json = "1"
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
# -- Hashing (pwd-scheme01 & Token)
derive_more = { workspace = true }
enum_dispatch = "0.3"
uuid = {version = "1", features = ["v4","fast-rng",]}